--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <input name="number"
+      oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0,this.maxLength);"
+      type="number" maxlength="16" minLength="16" id="number" placeholder="Digite o número do cartão">
+     <input type="submit" value="Validar" id="send">
+     <p id="result"></p>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
