--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Validar cartão</title>
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+    <link rel="manifest" href="./images/site.webmanifest">
   </head>
   <body>
-    <header></header>
+    <header>
+      <button>Validação de cartão</button>
+    </header>
     <main>
+      <h1>Valide aqui o número do seu cartão</h1>
+      <p>O validador utiliza o Algoritmo Luhn para fazer a verificação do número do seu cartão. Para maiores informações sobre o Algoritmo <a href="">clique aqui</a>.</p>
       <input name="number"
       oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0,this.maxLength);"
       type="number" maxlength="16" minLength="16" id="number" placeholder="Digite o número do cartão">
      <input type="submit" value="Validar" id="send">
-     <p id="result"></p>
+     <p id="resultado"></p>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Projeto desenvolvido por <a href="" target="_blank">Josielen Rubin</a> para a turma SAP010 - Laboratória</p>
+    </footer>
     <script src="index.js" type="module"></script>
   </body>
 </html>
