Alterações de estilo. Layout 90% pronto

--- a/src/luhn.html
+++ b/src/luhn.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Validar cartão</title>
+  <title>Algoritmo Luhn</title>
   <link rel="stylesheet" href="variables.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
@@ -22,17 +22,8 @@
   </header>
   <main>
     <div class="infos">
-      <h1>Valide aqui o número do seu cartão</h1>
-      <p>O validador utiliza o Algoritmo Luhn para fazer a verificação do número do seu cartão. Para maiores informações
-        sobre o Algoritmo <a href="./luhn.html">clique aqui</a>.</p>
-    </div>
-    <div class="input">
-      <label>Digite o número do cartão</label>
-      <input name="number"
-        oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0,this.maxLength);"
-        type="number" maxlength="16" minLength="16" id="number" placeholder="0000 0000 0000 0000" class="numero">
-      <input type="submit" value="Validar" id="send" class="send">
-      <p id="resultado"></p>
+      <h1>Algoritmo Luhn</h1>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat ut quos odio corporis? Aperiam neque ipsam veritatis ab adipisci doloribus voluptates consequuntur suscipit? Ut, beatae similique nostrum quo tempora expedita.</p>
     </div>
   </main>
   <footer>
