--- a/src/index.html
+++ b/src/index.html
@@ -26,17 +26,20 @@
       <p>O validador utiliza o Algoritmo Luhn para fazer a verificação do número do seu cartão. Para maiores informações
         sobre o Algoritmo <a href="./luhn.html">clique aqui</a>.</p>
     </div>
-    <div class="input">
-      <label>Digite o número do cartão</label>
-      <input name="number"
-        oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0,this.maxLength);"
-        type="number" maxlength="16" minLength="16" id="number" placeholder="0000 0000 0000 0000" class="numero">
-      <input type="submit" value="Validar" id="send" class="send">
-      <p id="resultado"></p>
+    <form>
+      <div class="input">
+        <label for="nmr-cartao">Digite o número do cartão</label><br>
+        <input name="nmr-cartao"
+          oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..?)\../g, '$1');"
+          type="text" maxlength="16" required id="nmr-cartao" placeholder="0000 0000 0000 0000" class="numero">
+        <button id="btn-enviar">Validar</button>
+        <p id="resultado" onclick="zeraInput()">O resultado da validação aparecerá aqui.</p>
+    </form>
     </div>
   </main>
   <footer>
-    <p>Projeto desenvolvido por <a href="https://www.linkedin.com/in/josielen-rubin-076ab397/" target="_blank">Josielen Rubin</a> para a turma SAP010 - Laboratória</p>
+    <p>Projeto desenvolvido por <a href="https://www.linkedin.com/in/josielen-rubin-076ab397/" target="_blank">Josielen
+        Rubin</a> para a turma SAP010 - Laboratória</p>
   </footer>
   <script src="index.js" type="module"></script>
 </body>
