--- a/src/luhn.html
+++ b/src/luhn.html
@@ -23,7 +23,10 @@
   <main>
     <div class="infos">
       <h1>Algoritmo Luhn</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat ut quos odio corporis? Aperiam neque ipsam veritatis ab adipisci doloribus voluptates consequuntur suscipit? Ut, beatae similique nostrum quo tempora expedita.</p>
+      <p>O algoritmo de Luhn, também chamado de módulo 10, é um método de soma de verificação, usado para validar números de identificação, como o IMEI de telefones celulares, cartões de crédito etc.
+        Para maiores explicações sobre o Algoritmo <a href="https://en.wikipedia.org/wiki/Luhn_algorithm" target="_blank">acesse essa página.</a><br><br>
+        <span>Clique em "Validação de cartão" e teste agora o número do seu cartão!<span>
+      </p>
     </div>
   </main>
   <footer>
