alteração do README

--- a/src/luhn.html
+++ b/src/luhn.html
@@ -25,7 +25,7 @@
       <h1>Algoritmo Luhn</h1>
       <p>O algoritmo de Luhn, também chamado de módulo 10, é um método de soma de verificação, usado para validar números de identificação, como o IMEI de telefones celulares, cartões de crédito etc.
         Para maiores explicações sobre o Algoritmo <a href="https://en.wikipedia.org/wiki/Luhn_algorithm" target="_blank">acesse essa página.</a><br><br>
-        <span>Clique em "Validação de cartão" e teste agora o número do seu cartão!<span>
+        <span>Clique em "Validação de cartão" e teste agora o número do seu cartão!</span>
       </p>
     </div>
   </main>
