alterações pro pages

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Validar cartão</title>
-  <link rel="stylesheet" href="variables.css" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="src/variables.css" />
+  <link rel="stylesheet" href="src/style.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
@@ -18,13 +18,13 @@
 <body>
   <header>
     <button><a href="./index.html">Validação de cartão</a></button>
-    <button><a href="./luhn.html">Algoritmo Luhn</a></button>
+    <button><a href="src/luhn.html">Algoritmo Luhn</a></button>
   </header>
   <main>
     <div class="infos">
       <h1>Valide aqui o número do seu cartão</h1>
       <p>O validador utiliza o Algoritmo Luhn para fazer a verificação do número do seu cartão. Para maiores informações
-        sobre o Algoritmo <a href="./luhn.html">clique aqui</a>.</p>
+        sobre o Algoritmo <a href="src/luhn.html">clique aqui</a>.</p>
     </div>
     <form id="form">
       <div class="input">
@@ -40,7 +40,7 @@
   <footer>
     <p>Projeto desenvolvido por <a href="https://www.linkedin.com/in/josielen-rubin-076ab397/" target="_blank">Josielen Rubin</a> para a turma SAP010 - Laboratória</p>
   </footer>
-  <script src="index.js" type="module"></script>
+  <script src="src/index.js" type="module"></script>
 </body>
 
 </html>
