--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <footer>
     <p>Projeto desenvolvido por <a href="https://www.linkedin.com/in/josielen-rubin-076ab397/" target="_blank">Josielen Rubin</a> para a turma SAP010 - Laboratória</p>
   </footer>
-  <script src="src/index.js" type="module"></script>
+  <script src="index.js" type="module"></script>
 </body>
 
 </html>
