alteração final luhn

--- a/src/luhn.html
+++ b/src/luhn.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <button><a href="/index.html">Validação de cartão</a></button>
+    <button><a href="../index.html">Validação de cartão</a></button>
     <button><a href="./luhn.html">Algoritmo Luhn</a></button>
   </header>
   <main>
